--- a/ToDoListApp/app/src/main/res/layout/activity_main.xml
+++ b/ToDoListApp/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/rvTodoItems"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/edTodoTitle"
+        app:layout_constraintBottom_toTopOf="@+id/etTodoTitle"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="1dp" />
 
